--- a/person-user-ms-default.yml
+++ b/person-user-ms-default.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/comaco
+    url: jdbc:mariadb://localhost:3306/db_client
     username: db_client
     password: apppassword
     driver-class-name: org.mariadb.jdbc.Driver
@@ -13,6 +13,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+      dialect: org.hibernate.dialect.MariaDBDialect
     show-sql: true
     properties:
       hibernate:
