--- a/api-gateway-default.yml
+++ b/api-gateway-default.yml
@@ -48,3 +48,13 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka:${SPRING_EUREKA_PASSWORD}@${SPRING_EUREKA_HOST}:8761/eureka
+
+logging:
+  level:
+    root: info
+    org:
+      springframework:
+        cloud:
+          gateway: trace
+          gateway.route:
+            RouteDefinitionRouteLocator: info
