dev: disabling locator

--- a/api-gateway-default.yml
+++ b/api-gateway-default.yml
@@ -5,8 +5,8 @@ spring:
         webflux:
           discovery:
             locator:
-              enabled: true
-
+              enabled: false
+              lower-case-service-id: false
       routes:
         - id: person-user-ms
           uri: lb://PERSON-USER-MS
