dev: enabling locator

--- a/api-gateway-default.yml
+++ b/api-gateway-default.yml
@@ -5,7 +5,7 @@ spring:
         webflux:
           discovery:
             locator:
-              enabled: false
+              enabled: true
 
       routes:
         - id: person-user-ms
