--- a/person-user-ms-default.yml
+++ b/person-user-ms-default.yml
@@ -19,6 +19,12 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MariaDBDialect
 
+  sql:
+    init:
+      mode: always
+      platform: mariadb
+      continue-on-error: true
+      data-locations: classpath:inserts.sql
   servlet:
     multipart:
       enabled: true
@@ -42,3 +48,4 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka:${SPRING_EUREKA_PASSWORD}@${SPRING_EUREKA_HOST}:8761/eureka
+
