--- a/person-user-ms-docker.yml
+++ b/person-user-ms-docker.yml
@@ -18,7 +18,12 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MariaDBDialect
-
+  sql:
+    init:
+      mode: always
+      platform: mariadb
+      continue-on-error: true
+      data-locations: classpath:inserts.sql
   servlet:
     multipart:
       enabled: true
